--- a/Hardware/Project/Calculator/Makefile
+++ b/Hardware/Project/Calculator/Makefile
@@ -37,7 +37,7 @@ CINCS =
 CDEBUG = -g
 CWARN = -Wall -Wstrict-prototypes
 CTUNING = -funsigned-char -funsigned-bitfields -fpack-struct -fshort-enums
-CFLAGS = $(CDEBUG) $(CDEFS) $(CINCS) -O$(OPT) -O2 $(CWARN) $(CSTANDARD) $(CEXTRA)  -Wl,-u,vfscanf -lscanf_flt -Wl,-u,vfprintf -lprintf_flt
+CFLAGS = $(CDEBUG) $(CDEFS) $(CINCS) -O$(OPT) $(CWARN) $(CSTANDARD) $(CEXTRA)
 CPPFLAGS=-DF_CPU=$(F_CPU)L
 #ASFLAGS = -Wa,-adhlns=$(<:.S=.lst),-gstabs 
 
@@ -176,8 +176,6 @@ main.o: main.c /usr/avr/include/avr/io.h /usr/avr/include/avr/sfr_defs.h \
  /usr/avr/include/avr/portpins.h /usr/avr/include/avr/common.h \
  /usr/avr/include/avr/version.h /usr/avr/include/avr/fuse.h \
  /usr/avr/include/avr/lock.h /usr/avr/include/util/delay.h \
- /usr/avr/include/util/delay_basic.h parseltongue.h \
- /usr/avr/include/stdio.h /usr/lib/gcc/avr/14.2.0/include/stdarg.h \
- /usr/lib/gcc/avr/14.2.0/include/stddef.h /usr/avr/include/stdlib.h \
- /usr/avr/include/string.h /usr/avr/include/math.h \
- /usr/avr/include/ctype.h /usr/avr/include/avr/eeprom.h
+ /usr/avr/include/util/delay_basic.h /usr/avr/include/stdlib.h \
+ /usr/lib/gcc/avr/14.2.0/include/stddef.h /usr/avr/include/string.h \
+ /usr/avr/include/stdio.h /usr/lib/gcc/avr/14.2.0/include/stdarg.h
